# jmcomic-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/jmcomic_mcp/: __init__.py  fileserver.py  server.py
