[project]
name = "jmcomic-mcp"
version = "0.1.0"
description = "MCP server for JM Comic — search, download, and manage comics via Model Context Protocol"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "jmcomic @ git+https://github.com/hect0x7/JMComic-Crawler-Python",
    "mcp>=1.0.0",
]

[project.scripts]
jmcomic-mcp = "jmcomic_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jmcomic_mcp"]
